--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	</head>
 	<body>
 		<header>
-			<h1>SPACE: show bubbles;  R-Click: create positive particle;  L-Click: create negative particle</h1>
+			<h1>ENTER: reset;  SPACE: show bubbles;  R-Click: create positive particle;  L-Click: create negative particle</h1>
 		</header>
 			<section id="content">
 				<canvas id="Chemotaxis" data-processing-sources="Chemotaxis.pde">
